force-app/main/default/objects/RequestTaskAnswer__c/RequestTaskAnswer__c.object-meta.xml
<CustomObject>
    <label>依頼タスク回答</label>
    <nameField>
        <displayFormat>RTA-{0000000}</displayFormat>
        <label>依頼タスク回答番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>