force-app/main/default/objects/RequestTaskAnswer__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RequestTaskAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>