force-app/main/default/objects/RequestTaskAnswer__c/fields/EstimatedAnswerDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAnswerDate__c</fullName>
    <label>回答予定日</label>
    <type>Date</type>
</CustomField>