force-app/main/default/objects/RequestTaskAnswer__c/fields/IsAnswered__c.field-meta.xml
<CustomField>
    <fullName>IsAnswered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>回答完了</label>
    <type>Checkbox</type>
</CustomField>