force-app/main/default/objects/RequestTaskAnswer__c/fields/RequestTask__c.field-meta.xml
<CustomField>
    <fullName>RequestTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>依頼タスク</label>
    <referenceTo>RequestTask__c</referenceTo>
    <relationshipLabel>依頼タスク回答</relationshipLabel>
    <relationshipName>RequestTaskAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>