force-app/main/default/objects/RequestTaskAnswer__c/fields/SharePointURL__c.field-meta.xml
<CustomField>
    <fullName>SharePointURL__c</fullName>
    <label>SharePointURL</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>